istio-gateway/1_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: hello-dev
      protocol: HTTP
    hosts:
    - hello.dev
  - port: 
      number: 80
      name: httpbin-dev
      protocol: HTTP 
    hosts:
    - httpbin.dev
